{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 106,
  "lineage": "45d10a67-1964-5599-b320-86384084894a",
  "resources": [
    {
      "module": "module.deploy-webapp",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000915738785:vpc/vpc-03c63689ff0a2697d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07c8afa1a89705d4f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-e2e8f398",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03c63689ff0a2697d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04e7bac0aacc766ac",
            "owner_id": "000915738785",
            "state": "available",
            "tags": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.deploy-webapp",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000915738785:loadbalancer/app/WebAppServer-alb/7e1049ead7bbe227",
            "arn_suffix": "app/WebAppServer-alb/7e1049ead7bbe227",
            "dns_name": "WebAppServer-alb-2089774550.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:000915738785:loadbalancer/app/WebAppServer-alb/7e1049ead7bbe227",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WebAppServer-alb",
            "security_groups": [
              "sg-063c3537a73e94209"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-038406090991ea306"
              },
              {
                "subnet_id": "subnet-0c8d9855119452067"
              },
              {
                "subnet_id": "subnet-0e0f8812d72ee392b"
              }
            ],
            "subnets": [
              "subnet-038406090991ea306",
              "subnet-0c8d9855119452067",
              "subnet-0e0f8812d72ee392b"
            ],
            "vpc_id": "vpc-03c63689ff0a2697d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_subnet.public",
            "module.deploy-webapp.module.vpc.aws_vpc.this",
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.deploy-webapp.aws_security_group.lb",
            "module.deploy-webapp.data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-webapp",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000915738785:listener/app/WebAppServer-alb/7e1049ead7bbe227/ef11e72ef2d5f4e9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:000915738785:targetgroup/my-target-group/95d37066e91465c7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000915738785:listener/app/WebAppServer-alb/7e1049ead7bbe227/ef11e72ef2d5f4e9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:000915738785:loadbalancer/app/WebAppServer-alb/7e1049ead7bbe227",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy-webapp.aws_lb.alb",
            "module.deploy-webapp.aws_lb_target_group.lb_target_group",
            "module.deploy-webapp.aws_security_group.lb",
            "module.deploy-webapp.data.aws_vpc.main",
            "module.deploy-webapp.module.vpc.aws_subnet.public",
            "module.deploy-webapp.module.vpc.aws_vpc.this",
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-webapp",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:000915738785:targetgroup/my-target-group/95d37066e91465c7",
            "arn_suffix": "targetgroup/my-target-group/95d37066e91465c7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:000915738785:targetgroup/my-target-group/95d37066e91465c7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-target-group",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03c63689ff0a2697d"
          },
          "dependencies": [
            "module.deploy-webapp.data.aws_vpc.main",
            "module.deploy-webapp.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.deploy-webapp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000915738785:security-group/sg-05bf525d628de52d7",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bf525d628de52d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-ec2",
            "name_prefix": "",
            "owner_id": "000915738785",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03c63689ff0a2697d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy-webapp.data.aws_vpc.main",
            "module.deploy-webapp.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.deploy-webapp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000915738785:security-group/sg-063c3537a73e94209",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063c3537a73e94209",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-lb",
            "name_prefix": "",
            "owner_id": "000915738785",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03c63689ff0a2697d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy-webapp.data.aws_vpc.main",
            "module.deploy-webapp.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-webapp.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000915738785:internet-gateway/igw-0de5f6abc0251269c",
            "id": "igw-0de5f6abc0251269c",
            "owner_id": "000915738785",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            },
            "vpc_id": "vpc-03c63689ff0a2697d"
          },
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_vpc.this",
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-webapp.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de5f6abc0251269c",
            "id": "r-rtb-06efc64b2ec5bc70f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06efc64b2ec5bc70f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_vpc.this",
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.deploy-webapp.module.vpc.aws_internet_gateway.this",
            "module.deploy-webapp.module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-webapp.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000915738785:route-table/rtb-06efc64b2ec5bc70f",
            "id": "rtb-06efc64b2ec5bc70f",
            "owner_id": "000915738785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de5f6abc0251269c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-public"
            },
            "tags_all": {
              "Name": "my-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c63689ff0a2697d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_vpc.this",
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-webapp.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a59e72bf8992db80",
            "route_table_id": "rtb-06efc64b2ec5bc70f",
            "subnet_id": "subnet-0c8d9855119452067"
          },
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_route_table.public",
            "module.deploy-webapp.module.vpc.aws_subnet.public",
            "module.deploy-webapp.module.vpc.aws_vpc.this",
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e44a4c7b8760b00c",
            "route_table_id": "rtb-06efc64b2ec5bc70f",
            "subnet_id": "subnet-038406090991ea306"
          },
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_route_table.public",
            "module.deploy-webapp.module.vpc.aws_subnet.public",
            "module.deploy-webapp.module.vpc.aws_vpc.this",
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016eda0046978277f",
            "route_table_id": "rtb-06efc64b2ec5bc70f",
            "subnet_id": "subnet-0e0f8812d72ee392b"
          },
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.deploy-webapp.module.vpc.aws_route_table.public",
            "module.deploy-webapp.module.vpc.aws_subnet.public",
            "module.deploy-webapp.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy-webapp.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000915738785:subnet/subnet-0c8d9855119452067",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c8d9855119452067",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000915738785",
            "tags": {
              "Name": "my-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "my-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-03c63689ff0a2697d"
          },
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_vpc.this",
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000915738785:subnet/subnet-038406090991ea306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-038406090991ea306",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000915738785",
            "tags": {
              "Name": "my-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "my-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-03c63689ff0a2697d"
          },
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.deploy-webapp.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000915738785:subnet/subnet-0e0f8812d72ee392b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e0f8812d72ee392b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000915738785",
            "tags": {
              "Name": "my-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "my-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-03c63689ff0a2697d"
          },
          "dependencies": [
            "module.deploy-webapp.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.deploy-webapp.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.deploy-webapp.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000915738785:vpc/vpc-03c63689ff0a2697d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f06d24e4772dd4f8",
            "default_route_table_id": "rtb-04e7bac0aacc766ac",
            "default_security_group_id": "sg-0ece2fc83017c43d1",
            "dhcp_options_id": "dopt-e2e8f398",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03c63689ff0a2697d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04e7bac0aacc766ac",
            "owner_id": "000915738785",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}